<resources>
    <string name="app_name">Prototype</string>
    <string name="title_home">Prototype</string>

    <string name="facebook_app_id">1053054308619832</string>
    <string name="fb_login_protocol_scheme">fb1053054308619832</string>
    <string name="facebook_client_token">1053054308619832</string>

    <string name="server_err">Something went wrong.Please try again later</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>

    <!-- Splash Screen-->
    <string name="get_started">Get Started</string>
    <string name="prototype_app">Prototype App</string>

    <!--Login Screen -->
    <string name="welcome_back_prototype">Welcome Back Prototype</string>
    <string name="login_options">Login with the one of the following options</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm">Confirm</string>
    <string name="already_have_a_account">Already have a account?<font color='blue'> Sign In</font></string>


    <!--Sign In Screen-->
    <string name="sign_account">Sign Up Your Account</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_name">Enter your name</string>

    <!--Profile screen-->
    <string name="profile_info">Profile Info</string>
    <string name="user_name">User Name</string>
    <string name="userNameLabelView">User Name</string>
    <string name="personal_info">Personal Info</string>
    <string name="name">Name</string>
    <string name="manage_password">Manage Password</string>
    <string name="change_password">Change Password</string>

</resources>