<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.profile.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_shapes" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/profileImageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp">

                <com.mst.prototype.ui.profile.CirleImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:src="@drawable/ic_profile_bg" />

                <ImageView
                    android:id="@+id/editProfileImage"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="bottom|end"
                    android:src="@drawable/ic_profile_edit_icon" />
            </FrameLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/permissionPermitsCardView"
                style="@style/profileCardViewStyle"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center_horizontal"
                        android:text="@string/profile_info"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/gray" />

                    <LinearLayout style="@style/profileLinearLayoutSubHorizontal">

                        <ImageView
                            android:id="@+id/profileNameIcon"
                            style="@style/profileIconsStyle"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/user_name"
                            android:src="@drawable/ic_profile_name_icon" />

                        <RelativeLayout style="@style/relativeLayoutStyle">

                            <TextView
                                android:id="@+id/nameView"
                                style="@style/profileHintTextStyle"
                                android:text="@string/userNameLabelView" />

                            <TextView
                                android:id="@+id/nameTextView"
                                style="@style/profileTextStyle"
                                android:layout_below="@+id/nameView"
                                android:text="John" />
                        </RelativeLayout>
                    </LinearLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/profileCardViewStyle"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center_horizontal"
                        android:text="@string/personal_info"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/gray" />

                    <LinearLayout style="@style/profileLinearLayoutSubHorizontal">

                        <ImageView
                            style="@style/profileIconsStyle"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/user_name"
                            android:src="@drawable/ic_profile_name_icon" />

                        <RelativeLayout style="@style/relativeLayoutStyle">

                            <TextView
                                android:id="@+id/userNameView"
                                style="@style/profileHintTextStyle"
                                android:text="@string/name" />

                            <TextView
                                android:id="@+id/nameUserTextView"
                                style="@style/profileTextStyle"
                                android:layout_below="@+id/userNameView"
                                android:text="John" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout style="@style/profileLinearLayoutSubHorizontal">

                        <ImageView
                            style="@style/profileIconsStyle"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/user_name"
                            android:src="@drawable/ic_profile_name_icon" />

                        <RelativeLayout style="@style/relativeLayoutStyle">

                            <TextView
                                android:id="@+id/emailView"
                                style="@style/profileHintTextStyle"
                                android:text="@string/name" />

                            <TextView
                                android:id="@+id/emailTextView"
                                style="@style/profileTextStyle"
                                android:layout_below="@+id/emailView"
                                android:text="John@gmail.com" />
                        </RelativeLayout>
                    </LinearLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/profileCardViewStyle"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center_horizontal"
                        android:text="@string/manage_password"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@color/gray" />

                    <LinearLayout style="@style/profileLinearLayoutSubHorizontal">

                        <ImageView
                            android:id="@+id/passwordIcon"
                            style="@style/profileIconsStyle"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/user_name"
                            android:src="@drawable/ic_profile_name_icon" />

                        <RelativeLayout style="@style/relativeLayoutStyle">

                            <TextView
                                android:id="@+id/passwordView"
                                style="@style/profileHintTextStyle"
                                android:text="@string/change_password" />

                            <TextView
                                android:id="@+id/passwordTextView"
                                style="@style/profileTextStyle"
                                android:layout_below="@+id/passwordView"
                                android:text="************" />
                        </RelativeLayout>
                    </LinearLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>
